# reeot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  reeot.toml  reeot_default_xex.toml  reeot_gamelogic.toml  reeot_manifest.toml
.github/workflows/: _build.yml  ci.yml
scripts/: buildnocg.bat
src/: main.cpp  reeot_app.h
src/goliath_engine/common/: crash_handler.cpp  crash_handler.h  cvars.cpp  cvars.h  encoding.cpp  encoding.h  guest_memory.h  hooks.h  logging.h  misc.cpp  reboot.cpp  reboot.h  threading.cpp  threading.h
src/goliath_engine/installer/: install_constants.h  install_manifest.cpp  install_manifest.h  install_paths.cpp  install_paths.h  installer.cpp  installer.h  installer_dialog.cpp  installer_dialog.h  source_vfs.cpp  source_vfs.h
